<resources>
    <string name="app_name">Draft</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Email_hint">Your Email</string>
    <string name="Button_Press">Button</string>
    <string name="Login_Button" translatable="false">Login</string>
    <string name="action_setting_text">AccountSettings</string>
    <string name="action_logout_text">Logout</string>
    <string name="register_press">Register</string>
    <string name="reg_btn_text">Create New Account</string>
    <string name="reg_login_text">Already have an account?</string>
    <string name="Reg_pass_confirm" translatable="false">Confirm Password</string>
    <string name="scan_btn_text">Scan</string>
    <string name="enable_ble_text" translatable="false">Enable/Disable Bluetooth</string>
    <string name="UserName_text">Name</string>
    <string name="HeartRate_text">HeartRate</string>
    <string name="Oxygen_text">Oxygen</string>
    <string name="discoverable_text">Enable Discover setting</string>
    <string name="set_name_btn">Create Name</string>
    <string name="Account_page_text">Account Page</string>
    <string name="Name_btn">Create Name</string>
    <string name="set_age_btn">Set Age</string>
    <string name="age_btn">Set Age</string>
    <string name="HRPeak_text">HR Peak</string>
    <string name="HR_Lowest_txt">HR Lowest</string>
    <string name="Oxygen_txt">Oxygen</string>
    <string name="Confidencetxt">Confidence</string>
    <string name="save_btn">Save</string>
    <string name="title_devices">Main</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="title_activity_maps">Map</string>
    <string name="label_device_address">Address</string>
    <string name="label_state">State</string>
    <string name="disconnected_text">disconnected</string>
    <string name="label_data_text">Label_data</string>
    <string name="no_data_text">No Data</string>
    <string name="connected_text">connect</string>
    <string name="no_data">No data</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="User1_Text" translatable="false">User1</string>
    <string name="User2_text">User2</string>
    <string name="GPS_btn">GPS</string>
    <string name="GPS2_btn">GPS</string>
    <string name="Online_text">Online</string>
    <string name="RunBtn">Run</string>
    <string name="title_activity_maps2">Map</string>
    <string name="MainPage_text">Main Page</string>
    <string name="MainPage2_btn">Main Page 2</string>
    //For avoiding charging reasons, API key will be deleted after senior project.
    <string name="google_map_api_key">AIzaSyBMkuZa4YaSMY3Vg3QlwuAsVJeLpxJ6u1Y</string>
    <string name="GPSDirect">Press here for GPS</string>
</resources>
