<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountSettings">

    <EditText
        android:id="@+id/set_age"
        android:layout_width="188dp"
        android:layout_height="49dp"
        android:layout_marginTop="76dp"
        android:inputType="number"
        android:text="@string/set_age_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="132dp"
        android:layout_height="36dp"
        android:layout_marginTop="132dp"
        android:onClick="AddInfo"
        android:text="@string/save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toEndOf="@+id/set_name"
        app:layout_constraintTop_toTopOf="@+id/main_toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/set_name"
        android:layout_width="186dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:text="@string/set_name_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="122dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/HR_Peaktxt"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:text="@string/HRPeak_text" />

            <TextView
                android:id="@+id/HRPeakEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/HR_Lowest_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HR_Lowest_txt" />

            <TextView
                android:id="@+id/HRLowestEdit"
                android:layout_width="119dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Oxygentxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Oxygen_txt" />

            <TextView
                android:id="@+id/OxygenEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Confidencetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Confidencetxt" />

            <TextView
                android:id="@+id/ConfidenceEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>