<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

 <androidx.appcompat.widget.Toolbar
     android:id="@+id/second_toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/colorPrimary"
     android:minHeight="?attr/actionBarSize"
     android:theme="?attr/actionBarTheme" />

 <LinearLayout
     android:id="@+id/linearLayout2"
     android:layout_width="368dp"
     android:layout_height="43dp"
     android:orientation="horizontal"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.372"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.27">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_state"
      android:textSize="18sp" />

  <Space
      android:layout_width="5dp"
      android:layout_height="wrap_content" />

  <TextView
      android:id="@+id/connection_state"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/disconnected_text"
      android:textSize="18sp" />
 </LinearLayout>

 <LinearLayout
     android:id="@+id/linearLayout3"
     android:layout_width="368dp"
     android:layout_height="44dp"
     android:layout_margin="10dp"
     android:orientation="horizontal"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.372"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/linearLayout"
     app:layout_constraintVertical_bias="0.0">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_data_text"
      android:textSize="18sp" />

  <Space
      android:layout_width="5dp"
      android:layout_height="wrap_content" />

  <TextView
      android:id="@+id/data_value"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/disconnected_text"
      android:textSize="18sp" />
 </LinearLayout>

 <LinearLayout
     android:id="@+id/linearLayout"
     android:layout_width="374dp"
     android:layout_height="43dp"
     android:orientation="horizontal"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.486"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.106">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_device_address"
      android:textSize="18sp" />

  <Space
      android:layout_width="5dp"
      android:layout_height="wrap_content" />

  <TextView
      android:id="@+id/device_address"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="18sp" />
 </LinearLayout>

 <ListView
     android:id="@android:id/list"
     android:layout_width="397dp"
     android:layout_height="466dp"

     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="1.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
     app:layout_constraintVertical_bias="1.0">

 </ListView>


</androidx.constraintlayout.widget.ConstraintLayout>