<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

 <LinearLayout
     android:id="@+id/linearLayout2"
     android:layout_width="352dp"
     android:layout_height="39dp"
     android:orientation="horizontal"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.271"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.273">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_state"
      android:textSize="18sp" />

  <Space
      android:layout_width="5dp"
      android:layout_height="wrap_content" />

  <TextView
      android:id="@+id/connection_state"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/disconnected_text"
      android:textSize="18sp" />
 </LinearLayout>

 <LinearLayout
     android:id="@+id/linearLayout3"
     android:layout_width="375dp"
     android:layout_height="49dp"
     android:layout_margin="10dp"
     android:orientation="horizontal"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/linearLayout"
     app:layout_constraintVertical_bias="0.0">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_data_text"
      android:textSize="18sp" />

  <Space
      android:layout_width="5dp"
      android:layout_height="wrap_content" />

  <TextView
      android:id="@+id/data_value"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/disconnected_text"
      android:textSize="18sp" />
 </LinearLayout>

 <LinearLayout
     android:id="@+id/linearLayout"
     android:layout_width="378dp"
     android:layout_height="47dp"
     android:orientation="horizontal"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.181"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.103">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_device_address"
      android:textSize="18sp" />

  <Space
      android:layout_width="5dp"
      android:layout_height="wrap_content" />

  <TextView
      android:id="@+id/device_address"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="18sp" />
 </LinearLayout>

 <androidx.appcompat.widget.Toolbar
     android:id="@+id/main_toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.0">

 </androidx.appcompat.widget.Toolbar>

 <ExpandableListView
     android:id="@+id/lvNewDevices"
     android:layout_width="392dp"
     android:layout_height="487dp"

     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="1.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
     app:layout_constraintVertical_bias="1.0">

 </ExpandableListView>


</androidx.constraintlayout.widget.ConstraintLayout>